--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,47 +1,59 @@
-name-template: v$RESOLVED_VERSION 🌈
-tag-template: v$RESOLVED_VERSION
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
 categories:
-  - title: ':boom: Breaking Changes'
-    label: breaking
-  - title: ':package: Build System'
-    label: build
-  - title: ':construction_worker: Continuous Integration'
-    label: ci
-  - title: ':books: Documentation'
-    label: documentation
-  - title: ':rocket: Features'
-    label: enhancement
-  - title: ':beetle: Fixes'
-    label: bug
-  - title: ':racehorse: Performance'
-    label: performance
-  - title: ':hammer: Refactoring'
-    label: refactoring
-  - title: ':fire: Removals and Deprecations'
-    label: removal
-  - title: ':lipstick: Style'
-    label: style
-  - title: ':rotating_light: Testing'
-    label: testing
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '🧰 Maintenance'
+    labels:
+      - 'chore'
+      - 'maintenance'
+  - title: '📚 Documentation'
+    labels:
+      - 'docs'
+      - 'documentation'
+  - title: '⬆️ Dependencies'
+    labels:
+      - 'dependencies'
+      - 'dep'
+
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
-change-title-escapes: \<*_& # You can add # and @ to disable mentions, and add ` to disable code blocks.
+change-title-escapes: '\<*_&' # You can add # and @ here too
+
 version-resolver:
   major:
     labels:
-      - 'type: breaking'
+      - 'major'
+      - 'breaking'
   minor:
     labels:
-      - 'type: feature'
+      - 'minor'
+      - 'feature'
   patch:
     labels:
-      - 'type: bug'
-      - 'type: maintenance'
-      - 'type: docs'
-      - 'type: dependencies'
-      - 'type: security'
-exclude-labels:
-  - skip-changelog
+      - 'patch'
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+      - 'maintenance'
+  default: patch
+
 template: |
   ## Changes
 
   $CHANGES
+
+  ## 👨‍💻 Contributors
+
+  $CONTRIBUTORS
+
+  ## 🔗 Links
+
+  - [PyPI](https://pypi.org/project/jmbde/)
+  - [Documentation](https://jmbde-python.readthedocs.io/)
