--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,70 +3,92 @@ name: Release
 on:
   push:
     branches:
-      - master
+      - main
+    tags:
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   release:
     name: Release
-    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
+    runs-on: ubuntu-latest      
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2.3.4
+      - name: Check out repository
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0
+          persist-credentials: false
 
       - name: Set up Python
-        uses: actions/setup-python@v2.2.2
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.11"
+          cache: "pip"
+          
+      - name: Install Hatch
+        run: |
+          python -m pip install --upgrade pip
+          pip install hatch
+          hatch --version
+          
+      - id: version
+        name: Get Version
+        run: |
+          VERSION=$(hatch version)
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          echo "Version: ${VERSION}"
 
-      - name: Upgrade pip
-        run: |
-          pip install --constraint=.github/workflows/constraints.txt pip
-          pip --version
-      - name: Install Poetry
-        run: |
-          pip install --constraint=.github/workflows/constraints.txt poetry
-          poetry --version
-      - name: Check if there is a parent commit
-        id: check-parent-commit
-        run: |
-          echo "::set-output name=sha::$(git rev-parse --verify --quiet HEAD^)"
-      - name: Detect and tag new version
-        id: check-version
-        if: steps.check-parent-commit.outputs.sha
-        uses: salsify/action-detect-and-tag-new-version@v2.0.1
-        with:
-          version-command: |
-            bash -o pipefail -c "poetry version | awk '{ print \$2 }'"
-      - name: Bump version for developmental release
-        if: "! steps.check-version.outputs.tag"
-        run: |
-          poetry version patch &&
-          version=$(poetry version | awk '{ print $2 }') &&
-          poetry version $version.dev.$(date +%s)
+          
       - name: Build package
         run: |
-          poetry build --ansi
-      - name: Publish package on PyPI
-        if: steps.check-version.outputs.tag
-        uses: pypa/gh-action-pypi-publish@v1.4.2
+          hatch buil
+         
+      - name: Verify Package
+        run: |
+          hatch run test:test
+          hatch run security:check
+          
+      # Only run on tags
+      - if: startsWith(github.ref, 'refs/tags/v')
+        name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.8.10
         with:
-          user: __token__
-          password: "${{ secrets.PYPI_TOKEN }}"
+          password: ${{ secrets.PYPI_TOKEN }}
+          print-hash: true
+          verbose: true
 
-      - name: Publish package on TestPyPI
-        if: "! steps.check-version.outputs.tag"
-        uses: pypa/gh-action-pypi-publish@v1.4.2
-        with:
-          user: __token__
-          password: "${{ secrets.TEST_PYPI_TOKEN }}"
-          repository_url: https://test.pypi.org/legacy/
 
-      - name: Publish the release notes
-        uses: release-drafter/release-drafter@v5.15.0
+          
+     # Run on non-tag pushes to main/master
+      - if: "!startsWith(github.ref, 'refs/tags/v')"
+        name: Publish to TestPyPI
+        uses: pypa/gh-action-pypi-publish@v1.8.10
         with:
-          publish: "${{ steps.check-version.outputs.tag != '' }}"
-          tag: "${{ steps.check-version.outputs.tag }}"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          print-hash: true
+          repository-url: https://test.pypi.org/legacy/
+          verbose: true
+
+
+
+      - env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: startsWith(github.ref, 'refs/tags/v')
+        name: Create GitHub Release
+        uses: softprops/action-gh-release@v1        
+        with:
+          draft: false
+          files: dist/*
+          generate_release_notes: true
+          prerelease: false
+
+
+
+      - env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
+        if: "!startsWith(github.ref, 'refs/tags/v')"
+        name: Update Release Draft
+        uses: release-drafter/release-drafter@v5
