--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,128 +1,147 @@
 name: Tests
 
 on:
-  - push
-  - pull_request
+  pull_request:
+    branches: [ main, master ]
+  push:
+    branches: [ main, master ]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
+  workflow_dispatch:
+
+:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  tests:
-    name:  "${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}" 
-    runs-on: "${{ matrix.os }}"
+  test:
+    name: ${{ matrix.os }} / ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - { python-version: 3.9, os: ubuntu-latest, session: "pre-commit" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "safety" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.8, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.7, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.6, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.8, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.7, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.6, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.9, os: windows-latest, session: "tests" }
-          - { python-version: 3.9, os: macos-latest, session: "tests" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "typeguard" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "xdoctest" }
-          - { python-version: 3.8, os: ubuntu-latest, session: "docs-build" }
-
-    env:
-      NOXSESSION: "${{ matrix.session }}" 
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.9', '3.10', '3.11']
+        exclude:
+          - os: macos-latest
+            python-version: '3.9'
+          - os: windows-latest
+            python-version: '3.9'
 
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2.3.4
-
-      - name: Set up Python "${{ matrix.python-version }}" 
-        uses: actions/setup-python@v2.2.2
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          python-version: "${{ matrix.python-version }}"
+          fetch-depth: 0
 
-      - name: Upgrade pip
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+          cache-dependency-path: 'pyproject.toml'
+
+      - name: Install Hatch
         run: |
-          pip install --constraint=.github/workflows/constraints.txt pip
-          pip --version
-      - name: Install Poetry
-        run: |
-          pip install --constraint=.github/workflows/constraints.txt poetry
-          poetry --version
-      - name: Install Nox
-        run: |
-          pip install --constraint=.github/workflows/constraints.txt nox nox-poetry
-          nox --version
-      - name: Compute pre-commit cache key
+          python -m pip install --upgrade pip
+          pip install hatch
+
+      # Pre-commit cache for faster runs
+      - name: Set up pre-commit cache
+        uses: actions/cache@v3
         if: matrix.os != 'windows-latest'
-        id: cache_key
-        shell: python
-        run: |
-          import hashlib
-          import sys
-          python = "py{}.{}".format(*sys.version_info[:2])
-          payload = sys.version.encode() + sys.executable.encode()
-          digest = hashlib.sha256(payload).hexdigest()
-          result = "${{ runner.os }}-{}-{}-pre-commit".format(python, digest)
-          print("::set-output name=result::{}".format(result))
-      - name: Restore pre-commit cache
-        uses: actions/cache@v2.1.6
-        if: matrix.session == 'pre-commit'
         with:
           path: ~/.cache/pre-commit
-          key: "${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml') }}" 
+          key: ${{ runner.os }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
           restore-keys: |
-            "${{ steps.pre-commit-cache.outputs.result }}-" 
-      - name: Run Nox
+            ${{ runner.os }}-pre-commit-
+
+      - name: Lint
         run: |
-          nox --force-color --python="${{ matrix.python-version }}"
-      - name: Upload coverage data
-        if: always() && matrix.session == 'tests'
-        uses: "actions/upload-artifact@v2.2.4"
-        with:
-          name: coverage-data
-          path: ".coverage.*"
+          hatch run lint:style
+          hatch run lint:typing
 
-      - name: Upload documentation
-        if: matrix.session == 'docs-build'
-        uses: actions/upload-artifact@v2.2.4
-        with:
-          name: docs
-          path: docs/_build
+      - name: Run tests
+        run: |
+          hatch run test:cov
 
-  coverage:
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: true
+          verbose: true
+
+  security:
+    name: Security Checks
     runs-on: ubuntu-latest
-    needs: tests
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2.3.4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2.2.2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.11'
+          cache: 'pip'
 
-      - name: Upgrade pip
+      - name: Install Hatch
         run: |
-          pip install --constraint=.github/workflows/constraints.txt pip
-          pip --version
-      - name: Install Poetry
+          python -m pip install --upgrade pip
+          pip install hatch
+
+      - name: Run security checks
         run: |
-          pip install --constraint=.github/workflows/constraints.txt poetry
-          poetry --version
-      - name: Install Nox
-        run: |
-          pip install --constraint=.github/workflows/constraints.txt nox nox-poetry
-          nox --version
-      - name: Download coverage data
-        uses: actions/download-artifact@v2.0.10
+          hatch run security:check
+          hatch run security:audit
+
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: coverage-data
+          python-version: '3.11'
+          cache: 'pip'
 
-      - name: Combine coverage data and display human readable report
+      - name: Install Hatch
         run: |
-          nox --force-color --session=coverage
-      - name: Create coverage report
+          python -m pip install --upgrade pip
+          pip install hatch
+
+      - name: Build documentation
         run: |
-          nox --force-color --session=coverage -- xml
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v2.0.2
+          hatch run docs:build
+
+      - name: Upload documentation artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation
+          path: site/
+          retention-days: 7
+
+  notify:
+    needs: [test, security, docs]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - uses: technote-space/workflow-conclusion-action@v3
+
+      - name: Send Notification
+        if: env.WORKFLOW_CONCLUSION != 'success'
+        uses: rtCamp/action-discord-notify@v2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_USERNAME: GitHub Actions
+          DISCORD_AVATAR: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
+          DISCORD_TITLE: "Tests Workflow Failed"
+          DISCORD_COLOR: "#dc3545"
+          DISCORD_MESSAGE: "Tests workflow failed on ${{ github.repository }}"
