fix: issue on ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           
       - name: Build package
         run: |
-          hatch buil
+          hatch build
          
       - name: Verify Package
         run: |
