--- a/.github/workflows/add-issue-header.yml
+++ b/.github/workflows/add-issue-header.yml
@@ -11,11 +11,9 @@
 
 name: Add issue header
 
-on: # yamllint disable-line rule:truthy
+on:
   issues:
-    types:
-      # Only ever run once
-      - opened
+    types: [opened]
 
 permissions:
   contents: read
@@ -31,30 +29,35 @@ jobs:
           # language=JavaScript
           script: |
             // https://devguide.python.org/triage/labels/#type-labels
-            const HEADERS = new Map([
-              ['type-bug', 'Bug report'],
-              ['type-crash', 'Crash report'],
-              ['type-feature', 'Feature or enhancement'],
-            ]);
-            let issue_data = await github.rest.issues.get({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo
-            }).then(issue => issue.data);
-            let header = '';
-            for (const label_data of issue_data.labels) {
-                const label_name = (typeof label_data === 'string') ? label_data : label_data.name;
-                if (HEADERS.has(label_name)) {
-                    header = HEADERS.get(label_name);
-                    break;
-                }
-            }
-            if (header !== '') {
-              console.log(`Setting new header: ${header}`);
-              await github.rest.issues.update({
-                  issue_number: context.issue.number,
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  body: `# ${header}\n\n${issue_data.body.replaceAll('\r', '')}`
+            const ISSUE_TYPES = {
+              'type-bug': 'Bug report',
+              'type-crash': 'Crash report',
+              'type-feature': 'Feature or enhancement'
+            };
+            
+            try {
+              const { data: issue } = await 
+              github.rest.issues.get({
+                ...context.repo,
+                issue_number: context.issue.number
               });
+            
+              const matchedLabel = issue.labels
+                .map(label => typeof label === 'string' ? label : label.name)
+                .find(labelName => labelName in ISSUE_TYPES);
+
+              if (matchedLabel) {
+                const header = ISSUE_TYPES[matchedLabel];
+                console.log(`Adding header: ${header}`);
+                
+                await github.rest.issues.update({
+                  ...context.repo,
+                  issue_number: context.issue.number,
+                  body: `# ${header}\n\n${issue.body?.replaceAll('\r', '') || ''}`
+                });
+              } else {
+                console.log('No matching issue type label found');
+              }
+            } catch (error) {
+              core.setFailed(`Action failed: ${error.message}`);
             }
