--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,67 @@
- .pre-commit-config.yaml
+---
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
 exclude: ^3rd-party|COPYING|.gitmodules|conan|.*\.ui$|.*\.qrc$|.*\.ts$
+ci:
+  autofix_commit_msg: 🎨 [pre-commit.ci] Auto format from pre-commit.com hooks
+  autoupdate_commit_msg: ⬆ [pre-commit.ci] pre-commit autoupdate
 default_language_version:
-    python: python3
+  python: python3.11 # NOTE: sync with .python-version-default
 fail_fast: true
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
+        args: ['--markdown-linebreak-ext=md']
+        exclude: LICENSES/
       - id: end-of-file-fixer
       - id: check-yaml
+        args: [--unsafe, --allow-multiple-documents]
       - id: check-added-large-files
         args: ['--maxkb=1024']
       - id: check-ast
       - id: check-json
+        exclude: (\.devcontainer/devcontainer.json|\.vscode/)
       - id: check-merge-conflict
+      - id: check-case-conflict
       - id: check-xml
       - id: debug-statements
       - id: detect-private-key
       - id: mixed-line-ending
         args: ['--fix=lf']
+      - id: check-added-large-files
+        args: ['--maxkb=710']
+      - id: check-builtin-literals
 
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      - id: check-useless-excludes
+      
+  - repo: https://github.com/mxr/sync-pre-commit-deps
+    rev: v0.0.1
+    hooks:
+      - id: sync-pre-commit-deps
+    
+  - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+    rev: v9.19.0
+    hooks:
+      - id: commitlint
+        stages: [commit-msg]
+        additional_dependencies: ['@commitlint/config-angular']
+
+  
   - repo: https://github.com/psf/black
-    rev: 23.7.0
+    rev: 24.10.0
     hooks:
       - id: black
         language_version: python3
         args: [--line-length=88]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
@@ -39,30 +70,46 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
-        types_or: [javascript, jsx, ts, tsx, json, yaml, markdown]
+        args: ['--write']
+        types_or:
+           - yaml
+           - markdown
+           - html
+           - css
+           - scss
+           - javascript
+           - json
+           - jsx
+           - toml
+           - ts 
+           - tsx
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.3
+    rev: v0.8.3
     hooks:
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
+        types_or: [python, jupyter]
+        args: ['--fix', '--show-fixes']
+        exclude: ^(build|examples|tests)/.*$
+      - id: ruff-format
+        types_or: [python, jupyter]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.1
+    rev: v1.13.0
     hooks:
       - id: mypy
         additional_dependencies: [types-all]
         args: [--ignore-missing-imports]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
+    rev: 1.8.0
     hooks:
       - id: bandit
         args: ["-c", "pyproject.toml"]
         additional_dependencies: ["bandit[toml]"]
 
   - repo: https://github.com/PyCQA/pylint
-    rev: v3.0.1
+    rev: v3.3.2
     hooks:
       - id: pylint
         args: [
@@ -72,23 +119,67 @@ repos:
         additional_dependencies: [pylint-pytest]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
+    rev: v3.19.0
     hooks:
       - id: pyupgrade
         args: [--py39-plus]
 
   - repo: https://github.com/hadolint/hadolint
-    rev: v2.12.0
+    rev: v2.13.1-beta
     hooks:
       - id: hadolint
         args: ['--ignore', 'DL3008', '--ignore', 'DL3013']
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.37.0
+    rev: v0.43.0
     hooks:
       - id: markdownlint
         args: ["--config", ".markdownlint.json"]
 
-ci:
-  autofix_commit_msg: 🎨 [pre-commit.ci] Auto format from pre-commit.com hooks
-  autoupdate_commit_msg: ⬆ [pre-commit.ci] pre-commit autoupdate
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.30.0
+    hooks:
+      - id: check-dependabot
+      # - id: check-github-actions
+      - id: check-github-workflows
+      # - id: check-gitlab-ci
+      - id: check-readthedocs
+        # - id: check-taskfile
+        args: ['--verbose']
+
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.21.2
+    hooks:
+      - id: gitleaks
+
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.35.1
+    hooks:
+      - id: yamllint
+        args:
+          - -d
+          - '{extends: relaxed, rules: {line-length: {max: 90}}}'
+
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.30.0
+    hooks:
+      - id: check-github-workflows
+        args: ['--verbose']
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.3.0
+    hooks:
+      - id: codespell
+        additional_dependencies: ['tomli>=2.0.1']
+        exclude: (.*\.svg|pyproject.toml|LICENSE|LICENSES/|\.github/actions)
+
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.7.4
+    hooks:
+      - id: actionlint
+
+  - repo: https://github.com/fsfe/reuse-tool
+    rev: v5.0.2
+    hooks:
+      - id: reuse
+      
