--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,32 +8,43 @@ on:
       - 'v*'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+# Default to bash
+defaults:
+  run:
+    shell: bash
+
 jobs:
   release:
     name: Release
     permissions:
       contents: write
       id-token: write
-    runs-on: ubuntu-latest      
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      # Checkout the repository to the GitHub Actions runner
+      - name: '🧰 Checkout Source Code'
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: '⚙️️ Set up Python'
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
-          python-version: "3.11"
-          cache: "pip"
-          
+          python-version: '3.11'
+          check-latest: true
+          cache: 'pip'
+
       - name: Install Hatch
         run: |
           python -m pip install --upgrade pip
           pip install hatch
           hatch --version
-          
+
       - id: version
         name: Get Version
         run: |
@@ -41,16 +52,15 @@ jobs:
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "Version: ${VERSION}"
 
-          
       - name: Build package
         run: |
           hatch build
-         
+
       - name: Verify Package
         run: |
           hatch run test:test
           hatch run security:check
-          
+
       # Only run on tags
       - if: startsWith(github.ref, 'refs/tags/v')
         name: Publish to PyPI
@@ -60,9 +70,7 @@ jobs:
           print-hash: true
           verbose: true
 
-
-          
-     # Run on non-tag pushes to main/master
+      # Run on non-tag pushes to main/master
       - if: "!startsWith(github.ref, 'refs/tags/v')"
         name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.10
@@ -72,23 +80,20 @@ jobs:
           repository-url: https://test.pypi.org/legacy/
           verbose: true
 
-
-
-      - env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: startsWith(github.ref, 'refs/tags/v')
+      - if: startsWith(github.ref, 'refs/tags/v')
         name: Create GitHub Release
-        uses: softprops/action-gh-release@v1        
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        uses: softprops/action-gh-release@v1
         with:
           draft: false
           files: dist/*
           generate_release_notes: true
           prerelease: false
 
-
-
-      - env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
-        if: "!startsWith(github.ref, 'refs/tags/v')"
-        name: Update Release Draft
+      - if: "!startsWith(github.ref, 'refs/tags/v')"
+        name: Update Release Draftwihich pip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: release-drafter/release-drafter@v5
