--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,7 +34,7 @@
 # Die sprachspezifischen Genehmigungen und Beschränkungen
 # under der Lizenz sind dem Lizenztext zu entnehmen.
 
-version: "2.1"
+version: '2.1'
 services:
   test:
     build:
