--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ description = "JM BDE - Management of the inventory the computer equipment"
 readme = "README.md"
 requires-python = ">=3.9"
 license = "GPL-3.0-or-later"
+maintainers = [
+  { name = "Jürgen Mülbert" },
+  { email = "juergen.muelbert@outlook.de" },
+]
 authors = [{ name = "Jürgen Mülbert", email = "juergen.muelbert@outlook.de" }]
 # Pypi classifiers: https://pypi.org/classifiers/
 classifiers = [
@@ -61,16 +65,26 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.1.3",
+    "pre-commit>=5.0.0"
 ]
 
 [tool.hatch.version]
 path = "src/jmbde/__about__.py"
 
+[project.scripts]
+jmbde = "jmbde.main:main"
+
+[tool.hatch.build.targets.sdist]
+exclude = ["/.github", "/backend", "/scripts"]
+include = ["/src", "/tests", "/CHANGELOG.md", "/README.md", "/LICENSE"]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/jmbde"]
 
 [tool.hatch.envs.default]
+installer = "uv"
 dependencies = ["pytest", "pytest-cov"]
+scripts = {run = "python -m jmbde.main"}
 
 [tool.hatch.envs.lint]
 dependencies = ["black>=23.7.0", "mypy>=1.6.1", "isort>=5.12.0", "ruff>=0.1.3"]
